tests/snapshots/examples_fixtures/type_classes__ClassMatchableEffects__Flow__Matchable.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/ClassMatchableEffects/Flow/Matchable.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ClassMatchableEffects.Flow.Matchable` doesn't match file path `examples/type_classes/ClassMatchableEffects/Flow/Matchable.flx`.

  examples/type_classes/ClassMatchableEffects/Flow/Matchable.flx:3:1
  |
3 | module ClassMatchableEffects.Flow.Matchable {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
